# SWA-Server

./: Readme.txt  index.html  params.json
Server/: CMakeLists.txt
Server/Client/: CMakeLists.txt  ClientCommand.h  ClientCtl.cpp  ClientNetHandler.cpp  ClientNetHandler.h  ClientPlayer.cpp  ClientPlayer.h  Client_PCH.cpp  NetMsgHandler.cpp  NetMsgHandler.h  c_cfg.xml  clientCtl.vcxproj  clientCtl.vcxproj.filters
Server/LibProtocol/: CMakeLists.txt  msg.pb.cc  msg.pb.h  msg.proto  批量生成.bat
Server/Server/: CMakeLists.txt
Server/Shared/: CMakeLists.txt  ReadMe.txt  Shared.cpp  Shared.vcxproj  Shared.vcxproj.filters
Server/Shared/common/: BaseDefine.h  BaseSingle.h  CommonC2S.h  CommonDefine.h  CommonError.h  CommonInclude.h  CommonS2C.h  CommonUtility.h  DBConnection.cpp  DBConnection.h  DBHelper.cpp  DBHelper.h  DbConfig.h  DbDataBase.cpp  DbDataBase.h  DbField.cpp  DbField.h  DbRecord.cpp  DbRecord.h  DbRecordSet.cpp  DbRecordSet.h  DbServer.cpp  DbServer.h  Encrypt.cpp  Encrypt.h  LogManager.cpp  LogManager.h  Logger.h  MathBase.h  MemoryPool.cpp  MemoryPool.h  MsgDefine.h  MsgType.h  MysqlProtobufHelper.cpp  MysqlProtobufHelper.h  NetClient.cpp  NetClient.h  NetConfig.h  NetIOBuffer.cpp  NetIOBuffer.h  (+8 more)
Server/clientCtl/: ClientCommand.cpp  ClientCommand.h  ClientCtl.cpp  ClientPlayer.cpp  ClientPlayer.h  Client_PCH.h  NetMsgHandler.cpp  clientCtl.vcxproj
Server/cmake/: FindPCHSupport.cmake  options.cmake
Server/conf/: gameconfig.xml.bak
Server/server/: CharLevelConfig.h  ConfigBase.h  ControlBase.h  CreatureData.cpp  CreatureData.h  DBEquipment.cpp  DBEquipment.h  DBLoginHandler.cpp  DBLoginHandler.h  EquipStageConfig.cpp  EquipStageConfig.h  FightTeamRegion.cpp  FightTeamRegion.h  GameCommand.cpp  GameCommand.h  GameConfig.cpp  GameConfig.h  GameDB.h  GlobalVar.cpp  GlobalVar.h  Makefile  Makefile.in  NetChatHandler.cpp  NetChatHandler.h  NetLoginHandler.cpp  NetLoginHandler.h  NetMsgHandler.cpp  NetMsgHandler.h  Player.cpp  Player.h  PlayerMgr.cpp  PlayerMgr.h  Player_def.h  ResourceMgr.h  Server_PCH.cpp  Server_PCH.h  StringCommon.h  main.cpp  server.vcxproj  server.vcxproj.filters  (+1 more)
Server/sql/: data.sql  log.sql
doc/: SWA框架更改记录201412.doc  Swallow-游戏框架文档.doc
sql/: swa_data.sql
